# ed_navigation

./: .travis.yml  CMakeLists.txt  README.md  package.xml
ed_navigation/: CMakeLists.txt  README.md  package.xml  plugins.xml  rosdoc.yaml
ed_navigation/include/ed/navigation/: map.h  occupancy_grid_publisher.h
ed_navigation/include/ed_navigation/: kinect_navigation_plugin.h  navigation_plugin.h
ed_navigation/scripts/: visualize-symbolic-navigation-goal
ed_navigation/src/: depth_sensor_integrator.cpp  depth_sensor_integrator.h  kinect_navigation_plugin.cpp  map.cpp  navigation_plugin.cpp  navigation_plugin.h  occupancy_grid_publisher.cpp  occupancy_grid_publisher.h
ed_navigation_msgs/: CMakeLists.txt  package.xml
include/ed_navigation/: kinect_navigation_plugin.h  navigation_plugin.h
scripts/: .visualize-symbolic-navigation-goal.swp  visualize-symbolic-navigation-goal
src/: depth_sensor_integrator.cpp  depth_sensor_integrator.h  kinect_navigation_plugin.cpp  map.cpp  map.h  navigation_plugin.cpp  occupancy_grid_publisher.cpp  occupancy_grid_publisher.h  timer.h
srv/: GetGoalConstraint.srv
tools/: show-area.py
