<?xml version="1.0"?>
<package>
  <name>ed_navigation</name>
  <version>0.0.0</version>
  <description>No description available</description>

  <maintainer email="s.v.d.dries@tue.nl">Sjoerd van den Dries</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>cb_planner_msgs_srvs</build_depend>
  <build_depend>ed</build_depend>
  <build_depend>ed_sensor_integration</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>rgbd</build_depend>

  <run_depend>cb_planner_msgs_srvs</run_depend>
  <run_depend>ed</run_depend>
  <run_depend>ed_sensor_integration</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>rgbd</run_depend>

</package>
