<?xml version="1.0"?>
<?xml-model
  href="http://download.ros.org/schema/package_format3.xsd"
  schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ed_navigation</name>
  <version>0.0.0</version>
  <description>No description available</description>

  <author email="s.v.d.dries@tue.nl">Sjoerd van den Dries</author>

  <maintainer email="MatthijsBurgh@outlook.com">Matthijs van der Burgh</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>ed</depend>
  <depend>ed_navigation_msgs</depend>
  <depend>ed_sensor_integration</depend>
  <depend>nav_msgs</depend>
  <depend>rgbd</depend>
  <depend>sensor_msgs</depend>
  <depend>roscpp</depend>

  <exec_depend>cb_base_navigation</exec_depend>
  <exec_depend condition="$ROS_PYTHON_VERSION == 2">python-docopt</exec_depend>
  <exec_depend condition="$ROS_PYTHON_VERSION == 3">python3-docopt</exec_depend>

</package>
