<?xml version="1.0"?>
<?xml-model
  href="http://download.ros.org/schema/package_format3.xsd"
  schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ed_navigation</name>
  <version>0.0.0</version>
  <description>
  Plugin for the ED world model, which provides ROS interfaces for an oocupancy grid and constrained navigation.
  </description>

  <author email="s.v.d.dries@tue.nl">Sjoerd van den Dries</author>

  <maintainer email="MatthijsBurgh@outlook.com">Matthijs van der Burgh</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>ed</depend>
  <depend>geolib2</depend>
  <depend>libopencv-dev</depend>
  <depend>roscpp</depend>
  <depend>tue_config</depend>

  <build_depend>ed_navigation_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>

  <exec_depend>cb_base_navigation_msgs</exec_depend>
  <exec_depend>ed_navigation_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>python3-docopt</exec_depend>
  <exec_depend>rospy</exec_depend>

  <test_depend>catkin_lint_cmake</test_depend>

  <doc_depend>doxygen</doc_depend>

  <export>
    <ed plugin="${prefix}/plugins.xml" />
    <rosdoc config="rosdoc.yaml" />
  </export>

</package>
